--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -204,11 +204,16 @@ jobs:
     container: debian:bullseye
     if: (inputs.BUILD_32x == 'true') && (inputs.BUILD_LINUX == 'true')
     steps:
-      - name: Install Dependencies
+      - name: Refresh Dependencies
         run: |
           dpkg --add-architecture i386
           apt update
-          apt install -y --no-install-recommends gcc:i386 g++:i386 make libstdc++6:i386 curl git ca-certificates
+
+      - name: Install Dependencies
+      - uses: actions/checkout@v2
+      - uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: gcc:i386 g++:i386 make libstdc++6:i386 curl git ca-certificates
       
       - uses: actions/checkout@v4
         name: Checkout
